# CredChain

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_BREAKDOWN.md  README.md  docker-compose.yml  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/tests/: credit_scoring.rs
frontend/: package.json
frontend/src/: App.tsx
frontend/src/store/: index.ts
frontend/src/store/slices/: authSlice.ts  creditSlice.ts  loansSlice.ts  uiSlice.ts
